# Neural-Constitution-Engine

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OPEN_SOURCE_CHECKLIST.md  PROJECT_STATUS.md  PUBLIC_API.md  README.md  RELEASE.md  RELEASE_NOTES_v1_RC.md  SECURITY.md  allow_test_output.txt  allow_test_output2.txt  allow_test_output3.txt  allow_test_output4.txt  coverage_report.txt  debug.py  debug_auth_me.py  debug_org.py  diagnose_routes.py  docker-compose.yml  fix.py  fix_frontend_imports.py  fix_indent.py  fix_task.py  fix_walkthrough.py  gemini_err.txt  patch.py  pyproject.toml  pytest_output.txt  run_test.py  scratch.py  test_add_audits.py  test_add_node.py  (+10 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
backend/: README.md
backend/api/: adapters.py  app.py  config.py  dependencies.py  errors.py  middleware.py
backend/api/routes/: api_keys.py  audits.py  auth.py  constitutions.py  evaluate.py  health.py  langgraph_routes.py  plans.py  providers.py  validate.py
backend/api/schemas/: base.py  evaluate.py  plans.py
backend/application/cache/: engine_cache.py
backend/application/repositories/: audit_repository.py  constitution_repository.py  organization_repository.py
backend/application/services/: audit_service.py  constitution_service.py  engine_manager.py  evaluation_service.py
backend/auth/: security.py
backend/cli/: __init__.py  adapters.py  main.py
backend/core/: __init__.py
backend/core/constitution/: __init__.py  (+5 more)
backend/database/: session.py
backend/migrations/: env.py
backend/models/: models.py
backend/sdk/: __init__.py  builder.py  config.py  engine.py  exceptions.py  types.py
docs/: NCE-Whitepaper.md  application-architecture.md  architecture-audit.md  architecture.md  benchmarks.md  cli-guide.md  constitution-engine.md  constitution-language.md  decision-model.md  end-to-end-validation.md  execution-plans.md  faq.md  fastapi-guide.md  getting-started.md  langgraph-integration.md  performance-report.md  plugin-development.md  project-documentary.md  provider-integration.md  quickstart.md  release-readiness.md  roadmap.md  runtime-validation.md  sdk-guide.md  security-review.md  technical-debt.md  troubleshooting.md  v0.2-roadmap.md  validation-report.md  vision.md
examples/: audit.json  benchmark_language.py  constitution.yaml  quickstart.py  request.json
examples/devops-governance/: README.md  architecture.md  constitution.yaml  demo.py  docker-compose.yml  execution-plan-rejected.json  execution-plan.json
examples/langgraph/: constitution.yaml  governed_agent.py
examples/providers/: provider_switching.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
scripts/: benchmark.py  bootstrap.sh  fuzz_language.py  seed_db.py  stress_test.py  thread_safety_test.py  verify_auth.py  verify_constitution.py  verify_db.py  verify_evaluation.py  verify_full_evaluation.py  verify_langgraph.py  verify_providers.py  verify_security.py  verify_startup.py
(+134 files in other folders)
