[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-constitution-engine"
version = "0.1.0-alpha"
description = "Deterministic policy and governance engine for AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Governance Team", email = "governance@example.com"}
]
dependencies = [
    "pyyaml>=6.0.1",
    "fastapi>=0.111.0,<0.139.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.12.12",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=backend --cov-report=term-missing --cov-fail-under=90"
testpaths = [
    "backend/tests",
]
